--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -40,5 +40,13 @@
 
   <!-- Competition Details -->
   <string name="competition_details">Competition Details</string>
+  <string name="current_season">Current Season:</string>
+  <string name="area">Area:</string>
+  <string name="plan">Plan:</string>
+  <string name="seasons">Seasons</string>
+  <string name="teams">Teams</string>
+
+  <!-- Team Details -->
+  <string name="team_details">Team Details</string>
 
 </resources>
