+ Finish team details

--- a/presentation/src/main/res/values-ar/strings.xml
+++ b/presentation/src/main/res/values-ar/strings.xml
@@ -45,5 +45,8 @@
 
   <!-- Team Details -->
   <string name="team_details">تفاصيل الفريق</string>
+  <string name="address">العنوان:</string>
+  <string name="club_colors">الوان النادى:</string>
+  <string name="team_players">اللاعبين:</string>
 
 </resources>
